Changed the names of index file

--- a/contacts.html
+++ b/contacts.html
@@ -17,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css?family=Hind:500" rel="stylesheet">
 </head>
 <body>
-    <img src="assets/images/arrow.png" class="back" onclick="window.location.href='main.html'"/>
+    <img src="assets/images/arrow.png" class="back" onclick="window.location.href='index.html'"/>
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12">
