--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
 
 </head>
 <body>
-<img src="assets/images/arrow.png" class="back" onclick="window.location.href='main.html'"/>
+<img src="assets/images/arrow.png" class="back" onclick="window.location.href='index.html'"/>
     <div class="container-fluid">
 
         <div class="row">
