Added Google Analytics

--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116472004-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-116472004-1');
+    </script>
+
     <meta charset="UTF-8">
     <title>HJS - Projects</title>
     <link href="assets/style/projects.css" rel="stylesheet">
@@ -38,27 +48,29 @@
                 <div class="border"></div>
 
             </div>
-            <div class="col-sm-4" class="fill">
-                <div class="space"></div>
+            <div class="col-sm-4">
+                <div class="fill">
+                    <div class="space"></div>
 
-                <div class="image-container">
-                    <img src="assets/images/photo-manager.png" class="project-image">
-                    <div class="overlay">
-                        <div class="text">Photo Manger</div>
-                        <button onclick="location.href='https://github.com/hjung-shin/PhotoManager'" class="button">Go to project!</button>
+                    <div class="image-container">
+                        <img src="assets/images/photo-manager.png" class="project-image">
+                        <div class="overlay">
+                            <div class="text">Photo Manger</div>
+                            <button onclick="location.href='https://github.com/hjung-shin/PhotoManager'" class="button">Go to project!</button>
+                        </div>
                     </div>
-                </div>
 
-                <div class="border"></div>
+                    <div class="border"></div>
 
-                <div class="image-container">
-                    <img src="assets/images/fish-game.PNG" class="project-image">
-                    <div class="overlay">
-                        <div class="text">Fish Game</div>
-                        <button onclick="location.href='https://github.com/hjung-shin/FishGame'" class="button">Go to project!</button>
+                    <div class="image-container">
+                        <img src="assets/images/fish-game.PNG" class="project-image">
+                        <div class="overlay">
+                            <div class="text">Fish Game</div>
+                            <button onclick="location.href='https://github.com/hjung-shin/FishGame'" class="button">Go to project!</button>
+                        </div>
                     </div>
-                </div>
 
+                </div>
             </div>
             <div class="col-sm-2">
                 <h1 class="header">Projects</h1>
