--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116472004-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-116472004-1');
+    </script>
+
     <meta charset="UTF-8">
     <title>HJS</title>
     <link href="assets/style/index-style.css" rel="stylesheet">
@@ -32,18 +42,20 @@
                 <div class="space"></div>
                 <h1 class="center-text">Sabina [Hyun Jung] Shin</h1>
                 <div class="small-space"></div>
-                <div class="container" class="row">
-                    <div class="col-sm-2"></div>
-                    <div class="col-sm-2">
-                        <button onclick="window.location.href='bio.html'" class="button">BIO</button>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-2"></div>
+                        <div class="col-sm-2">
+                            <button onclick="window.location.href='bio.html'" class="button">BIO</button>
+                        </div>
+                        <div class="col-sm-2">
+                            <button onclick="window.location.href='projects.html'" class="button">PROJECTS</button>
+                        </div>
+                        <div class="col-sm-2">
+                            <button onclick="window.location.href='contacts.html'" class="button">CONTACTS</button>
+                        </div>
+                        <div class="col-sm-4"></div>
                     </div>
-                    <div class="col-sm-2">
-                        <button onclick="window.location.href='projects.html'" class="button">PROJECTS</button>
-                    </div>
-                    <div class="col-sm-2">
-                        <button onclick="window.location.href='contacts.html'" class="button">CONTACTS</button>
-                    </div>
-                    <div class="col-sm-4"></div>
                 </div>
             </div>
             <div class="col-sm-1"></div>
